[gd_scene load_steps=8 format=3 uid="uid://dupiq34fn8h0m"]

[ext_resource type="Script" uid="uid://dc57r5of0dj4w" path="res://script/weapon_1_color_1.gd" id="1_5yft6"]
[ext_resource type="Texture2D" uid="uid://sejj4ata0dj5" path="res://assets/Cannon1_color1/Cannon1_color1_3.png" id="1_waxwy"]
[ext_resource type="Texture2D" uid="uid://cdhmcssg17n6c" path="res://assets/Cannon1_color1/Cannon1_color1_1.png" id="2_pc02i"]
[ext_resource type="Texture2D" uid="uid://c1v0n0bylawbx" path="res://assets/Cannon1_color1/Cannon1_color1_2.png" id="3_5yft6"]
[ext_resource type="Texture2D" uid="uid://ban3kav3hqcvh" path="res://assets/Cannon1_color1/Cannon1_color1_4.png" id="4_mto5y"]

[sub_resource type="SpriteFrames" id="SpriteFrames_6dmtn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_pc02i")
}, {
"duration": 1.0,
"texture": ExtResource("3_5yft6")
}, {
"duration": 1.0,
"texture": ExtResource("1_waxwy")
}, {
"duration": 1.0,
"texture": ExtResource("4_mto5y")
}],
"loop": false,
"name": &"shoot",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_5yft6"]
radius = 500.0

[node name="Weapon_1_color_1" type="Node2D"]
script = ExtResource("1_5yft6")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(27, 0)
rotation = 4.71239
sprite_frames = SubResource("SpriteFrames_6dmtn")
animation = &"shoot"

[node name="RayCast2D" type="RayCast2D" parent="AnimatedSprite2D"]
modulate = Color(0.0392157, 0, 0, 1)
position = Vector2(0, -27)
target_position = Vector2(0, 500)
collision_mask = 6

[node name="BulletSpawner" type="Node2D" parent="AnimatedSprite2D"]
position = Vector2(-2, 54)

[node name="Reload" type="Timer" parent="."]

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_5yft6")

[node name="RayAndShoot" type="Timer" parent="."]
autostart = true

[node name="FindBestTarget" type="RayCast2D" parent="."]
self_modulate = Color(0.776234, 0.592811, 5.77569e-07, 1)
rotation = 4.71239
collision_mask = 6

[node name="CheckActiveTarget" type="Timer" parent="."]

[connection signal="timeout" from="Reload" to="." method="_on_reload_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="RayAndShoot" to="." method="_on_ray_and_shoot_timeout"]
[connection signal="timeout" from="CheckActiveTarget" to="." method="_on_check_active_target_timeout"]
